--- a/src/makefile
+++ b/src/makefile
@@ -69,7 +69,8 @@ $(OBJD)/FetchStage.o: $(INC)/PipeRegArray.h $(INC)/PipeReg.h $(INC)/Memory.h \
  $(INC)/FetchStage.h $(INC)/Instruction.h $(INC)/RegisterFile.h $(INC)/Status.h \
  $(INC)/F.h $(INC)/D.h
 
-$(OBJD)/DecodeStage.o: $(INC)/DecodeStage.h $(INC)/PipeRegArray.h $(INC)/Instruction.h $(INC)/Status.h $(INC)/D.h
+$(OBJD)/DecodeStage.o: $(INC)/DecodeStage.h $(INC)/PipeRegArray.h $(INC)/Instruction.h \
+ $(INC)/Status.h $(INC)/D.h $(INC)/E.h
 
 $(OBJD)/ExecuteStage.o: $(INC)/ExecuteStage.h $(INC)/PipeRegArray.h
 
