implemented selectPC, needRegId, and need_ValC methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "WritebackStage.C": "cpp",
         "F.C": "cpp",
         "M.C": "cpp",
-        "W.C": "cpp"
+        "W.C": "cpp",
+        "Tools.C": "cpp",
+        "Memory.C": "cpp"
     }
 }
