HCL for Decode Stage

--- a/src/makefile
+++ b/src/makefile
@@ -70,7 +70,7 @@ $(OBJD)/FetchStage.o: $(INC)/PipeRegArray.h $(INC)/PipeReg.h $(INC)/Memory.h \
  $(INC)/F.h $(INC)/D.h $(INC)/M.h $(INC)/W.h $(INC)/Tools.h
 
 $(OBJD)/DecodeStage.o: $(INC)/DecodeStage.h $(INC)/PipeRegArray.h $(INC)/Instruction.h \
- $(INC)/Status.h $(INC)/D.h $(INC)/E.h
+ $(INC)/Status.h $(INC)/D.h $(INC)/E.h $(INC)/W.h $(INC)/M.h
 
 $(OBJD)/ExecuteStage.o: $(INC)/ExecuteStage.h $(INC)/PipeRegArray.h
 
