start of lab8 execute stage

--- a/src/makefile
+++ b/src/makefile
@@ -72,7 +72,8 @@ $(OBJD)/FetchStage.o: $(INC)/PipeRegArray.h $(INC)/PipeReg.h $(INC)/Memory.h \
 $(OBJD)/DecodeStage.o: $(INC)/DecodeStage.h $(INC)/PipeRegArray.h $(INC)/Instruction.h \
  $(INC)/Status.h $(INC)/D.h $(INC)/E.h
 
-$(OBJD)/ExecuteStage.o: $(INC)/ExecuteStage.h $(INC)/PipeRegArray.h
+$(OBJD)/ExecuteStage.o: $(INC)/ExecuteStage.h $(INC)/PipeRegArray.h $(INC)/ConditionCodes.h \
+ $(INC)/Instruction.h $(INC)/Status.h $(INC)/E.h $(INC)/M.h
 
 $(OBJD)/MemoryStage.o: $(INC)/MemoryStage.h $(INC)/PipeRegArray.h
 
