updated some of decode stage and execute stage

--- a/src/makefile
+++ b/src/makefile
@@ -73,7 +73,7 @@ $(OBJD)/DecodeStage.o: $(INC)/DecodeStage.h $(INC)/PipeRegArray.h $(INC)/Instruc
  $(INC)/Status.h $(INC)/D.h $(INC)/E.h $(INC)/W.h $(INC)/M.h
 
 $(OBJD)/ExecuteStage.o: $(INC)/ExecuteStage.h $(INC)/PipeRegArray.h $(INC)/ConditionCodes.h \
- $(INC)/Instruction.h $(INC)/Status.h $(INC)/E.h $(INC)/M.h
+ $(INC)/Instruction.h $(INC)/Status.h $(INC)/E.h $(INC)/M.h $(INC)/Tools.h
 
 $(OBJD)/MemoryStage.o: $(INC)/MemoryStage.h $(INC)/PipeRegArray.h
 
