started on lab 9, 30/44 tests pass

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "Memory.C": "cpp",
         "yess.C": "cpp",
         "ExecuteStage.C": "cpp",
-        "RegisterFile.C": "cpp"
+        "RegisterFile.C": "cpp",
+        "ConditionCodes.C": "cpp"
     }
 }
