32/44, still trouble with andq

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "yess.C": "cpp",
         "ExecuteStage.C": "cpp",
         "RegisterFile.C": "cpp",
-        "ConditionCodes.C": "cpp"
+        "ConditionCodes.C": "cpp",
+        "MemoryStage.C": "cpp"
     }
 }
