readme change test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,28 @@
 {
     "files.associations": {
-        "Loader.C": "cpp",
-        "String.C": "cpp",
-        "lab5.C": "cpp",
-        "DecodeStage.C": "cpp",
-        "E.C": "cpp",
-        "D.C": "cpp",
-        "CPU.C": "cpp",
-        "PipeRegArray.C": "cpp",
-        "PipeReg.C": "cpp",
-        "PipeRegField.C": "cpp",
-        "FetchStage.C": "cpp",
-        "WritebackStage.C": "cpp",
-        "F.C": "cpp",
-        "M.C": "cpp",
-        "W.C": "cpp",
-        "Tools.C": "cpp",
-        "Memory.C": "cpp",
-        "yess.C": "cpp",
-        "ExecuteStage.C": "cpp",
-        "RegisterFile.C": "cpp",
-        "ConditionCodes.C": "cpp",
-        "MemoryStage.C": "cpp"
-    }
+		"Loader.C": "cpp",
+		"String.C": "cpp",
+		"lab5.C": "cpp",
+		"DecodeStage.C": "cpp",
+		"E.C": "cpp",
+		"D.C": "cpp",
+		"CPU.C": "cpp",
+		"PipeRegArray.C": "cpp",
+		"PipeReg.C": "cpp",
+		"PipeRegField.C": "cpp",
+		"FetchStage.C": "cpp",
+		"WritebackStage.C": "cpp",
+		"F.C": "cpp",
+		"M.C": "cpp",
+		"W.C": "cpp",
+		"Tools.C": "cpp",
+		"Memory.C": "cpp",
+		"yess.C": "cpp",
+		"ExecuteStage.C": "cpp",
+		"RegisterFile.C": "cpp",
+		"ConditionCodes.C": "cpp",
+		"MemoryStage.C": "cpp",
+		"ConditionCodesTester.C": "cpp",
+		"lab4.C": "cpp"
+	}
 }
